Closed Bug 664463 Opened 14 years ago Closed 14 years ago

Don't load anything to frameloader if it isn't in the docshell tree anymore

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch patch (obsolete) — Splinter Review
This is similar to Bug 610571. Unfortunately I don't have a testcase for this, but this was in my strong-parent-node patch. r- if you think I should find some über-strange testcase for this.
Attachment #539557 - Flags: review?(bzbarsky)
Comment on attachment 539557 [details] [diff] [review] patch >--- a/content/base/src/nsFrameLoader.cpp >+++ b/content/base/src/nsFrameLoader.cpp > nsCOMPtr<nsISupports> container = > doc->GetContainer(); > nsCOMPtr<nsIWebNavigation> parentAsWebNav = do_QueryInterface(container); >+ NS_ENSURE_STATE(container); Wouldn't you want to check parentAsWebNav here?
Attached patch fixedSplinter Review
Attachment #539557 - Attachment is obsolete: true
Attachment #539557 - Flags: review?(bzbarsky)
Attachment #539613 - Flags: review?(bzbarsky)
Comment on attachment 539613 [details] [diff] [review] fixed Yeah, I think this is ok.
Attachment #539613 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: