Bug 664463 - Don't load anything to frameloader if it isn't in the docshell tree anymore, r=bz